# cmake-superbuild-toolkit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
Others/: cmake-logs.txt  notes.txt
cmake/: MyAppConfig.cmake.in
cmake/Dependencies/: catch2.cmake  fmt.cmake  spdlog.cmake
include/myapp/: app.h
packaging/: CPackConfig.cmake
src/: main.cpp
src/app/: app.cpp
tests/: test_app.cpp
